refactor: update input placeholder for name field; clean up unused CSS styles

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                     stroke="#0A0723" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
                 </svg>
               </div>
-              <input type="text" id="name" placeholder="Type your valid email address" required
+              <input type="text" id="name" placeholder="Type your name" required
                 class="w-full h-12 pl-10 pr-4 border border-[#EAECEE] rounded-full focus:outline-none focus:border-[#2F6A62] text-[#0A0723]">
             </div>
             <p class="mt-1 text-[#EF372B] text-sm hidden" id="name-error">Please enter your name</p>
